FOF 3.4.1
================================================================================
+ loadAnyTemplate can optionally skip template overrides (useful for Blade template overrides which need to include the original file)
# [HIGH] TransparentAuthentication fails on PHP 7.3.0 (backport from FOF 4 branch)

FOF 3.4.0
================================================================================
+ Support for FEF Dark Mode in the FEF renderer class. Requires FEF 1.0.7 or later.
~ Changed package format to "files" due to Joomla failing to prevent downgrades on "library" packages
# [HIGH] IP helper returns the IPv4-embedded-in-IPv6 address (::ffff:192.168.0.1 or 0:0:0:0:0:fff:192.168.0.1) instead of the unwrapped IPv4 address, making IP matching impossible.

FOF 3.3.9
================================================================================
# [HIGH] Download: Some cURL versions return lowercase headers, making redirection detection impossible

FOF 3.3.8
================================================================================
# [LOW] Notice thrown from the cURL download adapter when there are empty header lines or lines without a colon

FOF 3.3.7
================================================================================
# [MEDIUM] Defend against Joomla! returning null values for pagination parameters, causing an exception
# [LOW] Warning from the Ip helper under CLI or when REMOTE_ADDR is not defined by the server (part 2)
# [LOW] Untranslated string in the Sort By drop-downs

FOF 3.3.6
================================================================================
+ DynamicGroups helper
+ gh-616 CLI application abstraction
~ Work around LiteSpeed sending compressed output under HTTP/2 when no Accept-Encoding is specified in the request
# [LOW] Warning from the Ip helper under CLI or when REMOTE_ADDR is not defined by the server

FOF 3.3.5
================================================================================