@@ -14,7 +14,7 @@ defined('_JEXEC') or die;
  *
  * Based on the Session package of Aura for PHP – https://github.com/auraphp/Aura.Session
  *
- * @method  function_exists(StringHelper $function)
+ * @method  function_exists(string $function)
  * @method  mcrypt_list_algorithms()
  * @method  hash_algos()
  */
