@@ -8,6 +8,7 @@
 namespace FOF30\View\Compiler;
 
 use FOF30\Container\Container;
+use FOF30\Utils\Phpfunc;
 
 defined('_JEXEC') or die;
 
@@ -89,9 +90,33 @@ class Blade implements CompilerInterface
 	 */
 	protected $container;
 
+	/**
+	 * Should I use the PHP Tokenizer extension to compile Blade templates? Default is true and is preferable. We expect
+	 * this to be false only on bad quality hosts. It can be overridden with Reflection for testing purposes.
+	 *
+	 * @var bool
+	 */
+	protected $usingTokenizer = false;
+
 	public function __construct(Container $container)
 	{
-		$this->container = $container;
+		$this->container      = $container;
+		$this->usingTokenizer = false;
+
+		if (function_exists('token_get_all') && defined('T_INLINE_HTML'))
+		{
+			$this->usingTokenizer = true;
+		}
+	}
+
+	/**
+	 * Report if the PHP Tokenizer extension is being used
+	 *
+	 * @return  bool
+	 */
+	public function isUsingTokenizer()
+	{
+		return $this->usingTokenizer;
 	}
 
 	/**
@@ -159,12 +184,24 @@ class Blade implements CompilerInterface
 	{
 		$result = '';
 
-		// Here we will loop through all of the tokens returned by the Zend lexer and
-		// parse each one into the corresponding valid PHP. We will then have this
-		// template as the correctly rendered PHP that can be rendered natively.
-		foreach (token_get_all($value) as $token)
+		if ($this->usingTokenizer)
 		{
-			$result .= is_array($token) ? $this->parseToken($token) : $token;
+			// Here we will loop through all of the tokens returned by the Zend lexer and
+			// parse each one into the corresponding valid PHP. We will then have this
+			// template as the correctly rendered PHP that can be rendered natively.
+			foreach (token_get_all($value) as $token)
+			{
+				$result .= is_array($token) ? $this->parseToken($token) : $token;
+			}
+		}
+		else
+		{
+			foreach ($this->compilers as $type)
+			{
+				$value = $this->{"compile{$type}"}($value);
+			}
+
+			$result .= $value;
 		}
 
 		// If there are any footer lines that need to get added to a template we will
@@ -173,7 +210,7 @@ class Blade implements CompilerInterface
 		if (count($this->footer) > 0)
 		{
 			$result = ltrim($result, PHP_EOL)
-				.PHP_EOL.implode(PHP_EOL, array_reverse($this->footer));
+				. PHP_EOL . implode(PHP_EOL, array_reverse($this->footer));
 		}
 
 		return $result;
@@ -1078,5 +1115,4 @@ class Blade implements CompilerInterface
 
 		return array_map('stripcslashes', $tags);
 	}
-
 }
