@@ -1,5 +1,6 @@
 FOF 3.4.1
 ================================================================================
++ Blade compiler can fall back to slower, less safe compilation when the PHP Tokenizer extension is disabled
 + loadAnyTemplate can optionally skip template overrides (useful for Blade template overrides which need to include the original file)
 # [HIGH] TransparentAuthentication fails on PHP 7.3.0 (backport from FOF 4 branch)
 
